--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+
+        classpath 'com.android.tools.build:gradle:8.1.4'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -16,3 +27,9 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+
+
+
+
+
