--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_bloc: ^8.1.6
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6 # يمكنك تركه كما هو
+  hive: ^2.2.3        # تأكد من أنه لا يطلب إصدار Dart أحدث من 3.6.0
+  hive_flutter: ^1.1.0
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
