--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   modal_progress_hud_nsn: ^0.5.1
+  intl: ^0.20.1
 
 
 dev_dependencies:
