--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.0.0
+  rflutter_alert: ^2.0.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6 # يمكنك تركه كما هو
@@ -35,13 +38,30 @@ dependencies:
   hive_flutter: ^1.1.0
 
 
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   modal_progress_hud_nsn: ^0.5.1
   intl: ^0.20.1
+
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/applogo.png
+  android: true
+  ios: true
+
+
+
+
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/applogo.png"
+
+
 
 
 dev_dependencies:
@@ -70,9 +90,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/WallPolygon.png
+     - assets/Illustration.png
+
+     - assets/warning_icon.png
+     - assets/rafiki.png
+     - assets/applogo.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
